--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>2048 Game by xtrp (Fred Adams)</title>
+	<title>2048 Game by xtrp (Gabriel Romualdo)</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
